# ai-kernel-demo

./: CMakeLists.txt  README.md
include/: fused_ops.h  matmul.h
src/: fused_ops.cu  main.cpp  matmul_cpu.cpp  matmul_cuda.cu
